# dac-eq

./: .envrc  .gitignore  .mcp.json.template  CLAUDE.md  LICENSE.txt  README.md  SECURITY.md  STREAMLIT_PROTOTYPE_PLAN.md  cli.py  config.toml  dac-eq.py  download-instructions.txt  install.sh  pyproject.toml  requirements-all.txt  requirements-mcp.txt  requirements.txt  streamlit_app.py  uninstall.sh
.claude/: settings.local.json
.claude/skills/eq-advisor/: SKILL.md
.streamlit/: secrets.toml.example
archive/: STREAMLIT_PROTOTYPE_PLAN.md  download-instructions.txt
cache/: README.md
cache/fr/aful-performer5+2/: default.csv
cache/fr/tanchjim-fission/: default.csv
cache/peq/moondrop/: flat.json
cache/peq/qudelix-5k/: flat.json
dev-tools/qudelix-probe/: server.py
dev-tools/tanchjim-probe/: server.py
docs/: CLAUDE.md  SECURITY.md
dsp_devices/: registry.py
dsp_devices/handlers/: __init__.py  moondrop.py  qudelix.py  tanchjim.py
eq/moondrop/: README.md  bass_boost.json  comprehensive_test.json  treble_adjust.json
eq/qudelix-5k/: energetic_metal.json  mellow_folk.json
eq/tanchjim-fission/: aful_explorer_style.json  aful_performer_5+2.json  flat_eq.json  grace_jones_spacious.json  mellow_folk.json  new_meta.json  tanchjim_default.json  v_shaped.json
mcp/autoeq-mcp/: optimizer.py  requirements.txt
mcp/autoeq-mcp/targets/: harman_ie_2019.csv
mcp/dac-eq-mcp/: requirements.txt  server.py
mcp/qudelix-probe/: server.py
mcp/tanchjim-probe/: server.py
peq_devices/: __init__.py
tools/: README.md  __init__.py  tool_definitions.py  tool_executor.py
tools/autoeq/: optimizer.py  server.py
tools/peq_devices/: base.py  server.py
tools/peq_devices/handlers/: qudelix.py  tanchjim.py
tools/squiglink/: server.py
tools/squiglink/frequency_responses/: Moondrop Blessing 3.csv
